--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,29 @@
-version: 2.1
-orbs:
-  cypress: cypress-io/cypress@3.3.1
+name: CI Workflow
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
 
 jobs:
   start-server:
-        docker:
-          - image: cypress/base:latest
-        steps:
-          - checkout
-          - run:
-              name: Install dependencies
-              command: npm install
-          - run:
-              name: Build the app
-              command: npm run build
+    runs-on: ubuntu-latest
+    container:
+      image: cypress/base:latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Install dependencies
+        run: npm install
+      - name: Build the app
+        run: npm run build
 
-workflows:
   run-tests:
-    jobs:
-      - start-server
-      - cypress/run:
-          name: run-component-tests
-          cypress-command: npx cypress run --component
+    needs: start-server
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Run Cypress component tests
+        run: npx cypress run --component
