--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,32 +3,42 @@ name: Lint workflow
 
 # Trigger workflow on all pull requests
 on:
-pull_request:
+  pull_request:
     branches:
-    - develop
-    - staging
+      - develop
+      - staging
+      - main
 
 # Jobs to carry out
 jobs:
-test:
+  test:
     # Operating system to run job on
     runs-on: ubuntu-latest
 
     # Steps in job
     steps:
-    # Get code from repo
-    - name: Checkout code
-        uses: actions/checkout@v1
+      # Get code from repo
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Use Node.js 21.x
-        uses: actions/setup-node@v1
+      - name: Use Node.js 18.x
+        uses: actions/setup-node@v3
         with:
-        node-version: 21.x
+          node-version: 18.x
 
-    # Install dependencies
-    - name: 🧰 install deps
+      # Cache Node.js modules
+      - name: Cache Node.js modules
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      # Install dependencies
+      - name: 🧰 Install Deps
         run: npm install
         
-    # Run lint
-    - name: Run lint
+      # Run lint
+      - name: Run Lint
         run: npm run lint
