--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,34 @@
-name: CI Workflow
+# Name of workflow
+name: Lint workflow
 
+# Trigger workflow on all pull requests
 on:
-  push:
-    branches:
-      - main
   pull_request:
+    branches:
+      - develop
+      - staging
 
+# Jobs to carry out
 jobs:
-  start-server:
+  test:
+    # Operating system to run job on
     runs-on: ubuntu-latest
-    container:
-      image: cypress/base:latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Install dependencies
-        run: npm install
-      - name: Build the app
-        run: npm run build
 
-  run-tests:
-    needs: start-server
-    runs-on: ubuntu-latest
+    # Steps in job
     steps:
+      # Get code from repo
       - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Run Cypress component tests
-        run: npx cypress run --component
+        uses: actions/checkout@v1
+
+      - name: Use Node.js 21.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 21.x
+
+      # Install dependencies
+      - name: 🧰 Install Deps
+        run: npm install
+        
+      # Run lint
+      - name: Run Lint
+        run: npm run lint
